--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "convex": "^1.15.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
