--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.16.0",
     "data-fns": "^1.1.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.0.0-beta.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-themes": "^0.3.0",
