--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.16.0",
-    "data-fns": "^1.1.0",
-    "date-fns": "^4.0.0-beta.1",
+    "date-fns": "^4.0.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-themes": "^0.3.0",
