--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.16.0",
+    "convex-helpers": "^0.1.58",
     "date-fns": "^4.0.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
