--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
     "@liveblocks/client": "^2.7.1",
+    "@liveblocks/node": "^2.7.1",
     "@liveblocks/react": "^2.7.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
