--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.5.2",
-    "@liveblocks/client": "^2.7.1",
-    "@liveblocks/node": "^2.7.1",
-    "@liveblocks/react": "^2.7.1",
+    "@clerk/nextjs": "^5.6.0",
+    "@liveblocks/client": "^2.7.2",
+    "@liveblocks/node": "^2.7.2",
+    "@liveblocks/react": "^2.7.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -21,11 +21,11 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "convex": "^1.16.0",
+    "convex": "^1.16.2",
     "convex-helpers": "^0.1.58",
-    "date-fns": "^4.0.0",
-    "lucide-react": "^0.441.0",
-    "next": "14.2.11",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.445.0",
+    "next": "14.2.13",
     "next-themes": "^0.3.0",
     "query-string": "^9.1.0",
     "react": "^18",
@@ -34,18 +34,18 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zustand": "^4.5.5"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
-    "@types/react": "^18",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18",
-    "eslint": "^9.10.0",
-    "eslint-config-next": "14.2.11",
+    "eslint": "^9.11.0",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
 }
